# ccpg1044-webscrap

./: .gitignore  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json
webscrap/: computrabajo.py  main.py
webscrap/data/: computrabajo.csv
webscrap/util/: merge_csv.py
