[tool.poetry]
name = "webscrap"
version = "0.0.1"
description = ""
authors = ["anntnzrb <anntnzrb@proton.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
